fix: read mail template via classpath stream instead of File
ClassPathResource.getFile() requires the resource to exist as a real
file on disk, which breaks once the app runs from an executable jar
(Docker deployment) instead of exploded classes. getInputStream()
works in both cases.